# schedule-generator-python

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/: form-1.xlsx
data/reference/: README.md  dead-groups.csv  group-buildings.json  groups-second-shift.csv  instructor-availability.json  instructor-days.json  instructor-rooms.json  nearby-buildings.json  rooms.csv  subject-rooms.json
docs/: CONSTRAINTS.md  SHCEDULING_CONSTRAINTS.md  SLOTS.md
docs/stages/: stage-1.md
output/: output.json
reference/: instructor-availability.json  instructor-prefixes.csv  subject-names-map.csv  subject-rooms.json
scripts/: analyze_year_distribution.py
specs/: FORM_1_PARSER_SPEC.md  GENERATE_EXCEL_SPEC.md
src/form1_parser/: __init__.py  cli.py  constants.py  exceptions.py  exporters.py  extractors.py  models.py  normalization.py  parser.py  patterns.py  utils.py  validators.py
src/form1_parser/scheduler/: __init__.py  algorithm.py  conflicts.py  constants.py  excel_generator.py  exporter.py  instructor_excel_generator.py  models.py  rooms.py  scheduler.py  stage3.py  stage4.py  stage5.py  stage6.py  stage7.py  unscheduled_excel_generator.py  utils.py
src/form1_parser/scheduler/config/: __init__.py  groups.py  instructors.py  (+3 more)
tests/: __init__.py  conftest.py  test_extractors.py  test_models.py  test_normalization.py  test_parser.py  test_patterns.py  test_utils.py
tests/scheduler/: __init__.py  test_algorithm.py  test_conflicts.py  test_excel_generator.py  test_instructor_excel_generator.py  test_rooms.py  test_stage7_distribution.py  test_utils.py
(+8 files in other folders)
