[project]
name = "schedule-generator-python"
version = "0.1.0"
description = "Form-1 Excel workload parser for schedule generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "ruff>=0.14.13",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
form1-parser = "form1_parser.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/form1_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
